<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/mainAppBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/falcons_team"
                android:textColor="@color/teamTitleGray"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="4dp"
                android:textColor="@color/mainScores"
                android:textSize="56sp" />

            <Button
                style="@style/CustomButtonStyle"
                android:onClick="touchDownFalcons"
                android:text="@string/six_points" />

            <Button
                style="@style/CustomButtonStyle"
                android:onClick="fieldGoalFalcons"
                android:text="@string/three_points" />

            <Button
                style="@style/CustomButtonStyle"
                android:onClick="safetyFalcons"
                android:text="@string/two_points" />

            <Button
                style="@style/CustomButtonStyle"
                android:onClick="extraPointFalcons"
                android:text="@string/one_points" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/patriots_team"
                android:textColor="@color/teamTitleGray"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="4dp"
                android:textColor="@color/mainScores"
                android:textSize="56sp" />

            <Button
                style="@style/CustomButtonStyle"
                android:onClick="touchDownPatriots"
                android:text="@string/six_points" />

            <Button
                style="@style/CustomButtonStyle"
                android:onClick="fieldGoalPatriots"
                android:text="@string/three_points" />

            <Button
                style="@style/CustomButtonStyle"
                android:onClick="safetyPatriots"
                android:text="@string/two_points" />

            <Button
                style="@style/CustomButtonStyle"
                android:onClick="extraPointPatriots"
                android:text="@string/one_points" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:onClick="restAllScore"
        android:text="@string/reset_button"
        android:textAllCaps="true" />
</RelativeLayout>